--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
   "minimum-stability": "dev",
   "require": {
     "intervention/image": "2.1.1",
-    "symfony/Filesystem": "~2.1"
+    "symfony/Filesystem": "~2.8",
+    "symfony/http-foundation": "~2.8",
+    "symfony/yaml": "~2.8"
   }
 }
