--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "intervention/image": "2.1.1",
     "symfony/Filesystem": "~2.7",
     "symfony/http-foundation": "~2.7",
-    "symfony/yaml": "~2.7",
-    "illuminate/config": "~5.1"
+    "symfony/yaml": "~2.7"
   },
   "minimum-stability": "dev"
 }
