--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,14 @@
     },
     "files": ["helpers.php"]
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/flysap/support.git"
+    }
+  ],
   "require": {
+    "flysap/support": "dev-master",
     "intervention/image": "2.1.1",
     "symfony/Filesystem": "~2.7",
     "symfony/http-foundation": "~2.7",
